Prevent overflow in IndexItem description

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -165,6 +165,7 @@ div.feed-index-item {
   .feed-index-item-title {
     font-size: 17px;
     color: black;
+    font-weight: bold;
     text-underline-position: under;
     margin-top: 15px;
     padding-bottom: 10px;
@@ -176,7 +177,8 @@ div.feed-index-item {
 
   .feed-index-item-description {
     font-size: 13px;
-    height: 40px;
+    height: 50px;
+    overflow: hidden;
 
     &:hover {
       cursor: pointer;
